h01 - dummy class Product; /product - getAllProducts